page gap resolve

--- a/sass/service.scss
+++ b/sass/service.scss
@@ -1,12 +1,9 @@
 #service {
-  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
-  @media screen and (max-width: 668px) {
-    min-height: auto;
-  }
+  top: -10rem;
 
   @media screen and (max-width: 568px) {
     top: 5rem;
